Remove aside and transfer icons to Navbar

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 				</section>
 
-				<aside class = "col-sm-3 col-lg-2 col-sm-pull-9 col-lg-pull-8 col-sm-height">
+				<aside class = "col-sm-3 col-lg-2 col-sm-pull-9 col-sm-height">
 					<h4 class="skill-title">
 					<b>Extraordinary Skills<b>
 					</h4>
@@ -125,36 +125,6 @@
 					
 				</aside>
 
-
-
-				<aside class ="site-nav-list col-xs-12 col-sm-2 col-sm-height">
-					<div class="homepage-nav">
-					<a href="#">
-						<i class="fa fa-home fa-4x"></i>
-						<h6>Home</h6>
-					</a>
-					<hr>
-					<a href="#">
-						<i class="fa fa-graduation-cap fa-4x"></i>
-						<h6>About</h6>
-					</a>
-					<hr>
-					<a href="#">
-						<i class="fa fa-briefcase fa-4x"></i>
-						<h6>Projects</h6>
-					</a>
-					<hr>
-					<a href="#">
-						<i class="fa fa-quote-right fa-4x"></i>
-						<h6>Blog</h6>
-					</a>
-					<hr>
-					<a href="#">
-						<i class="fa fa-at fa-4x"></i>
-						<h6>Contact</h6>
-					</a>
-					</div>
-				</aside>
 			</div>
 
 		</div>
