--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class= "navbar-brand" href="">Brand</a>
+                    <a class= "navbar-brand" href="#"><i class="fa fa-star"></i> A Ray of Code <i class="fa fa-star-o"></i></a>
 			</div>	
 		 	<div class = "collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		 		<ul class="nav navbar-nav navbar-right">
