--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 
-		<nav class="navbar navbar-inverse" role = "navigation">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role = "navigation">
 		<div class="container-fluid">
 			<div class ="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" 
