--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/appmain.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<script src="scripts/jquery.min.js"></script>
-	<script src = "bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+	
 </head>
 <body>
 <header>
 
-		<nav class="navbar navbar-inverse navbar-fixed-top" role = "navigation">
+		<nav class="navbar navbar-inverse navbar-fixed-top cbp-af-header" role = "navigation">
 		<div class="container-fluid">
 			<div class ="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" 
@@ -129,5 +128,9 @@
 
 		</div>
 <footer class = "container-fluid"><h1>Footer</h1></footer>
+	<script src="scripts/jquery.min.js"></script>
+	<script src = "bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="scripts/classie.js" type="text/javascript"></script>
+	<script src="scripts/cbpAnimatedHeader.js" type="text/javascript"></script>
 </body>
 </html>
