--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 					<article>
 						<h2>Why I want to code?</h2>
-						<img src="images/thumb_IMG_1155_1024.jpg">
+						<img class="img-responsive" alt="Responsive image" src="images/thumb_IMG_1155_1024.jpg">
 						<div class="row">
 							<p class="col-sm-10">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -60,7 +60,7 @@
 
 					<article>
 						<h2>Learning and growing</h2>
-						<img src="images/thumb_IMG_1190_1024.jpg">
+						<img class="img-responsive" alt="Responsive image" src="images/thumb_IMG_1190_1024.jpg">
 						<div class="row">
 							<p class="col-sm-10">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -75,7 +75,7 @@
 
 					<article>
 						<h2>People and Interaction</h2>
-						<img src="images/thumb_IMG_0884_1024.jpg">
+						<img class="img-responsive" alt="Responsive image" src="images/thumb_IMG_0884_1024.jpg">
 						<div class="row">
 							<p class="col-sm-10">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
